# codetopo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bench.ps1  gaps.md  install.ps1  install.sh  profile_subset.bat  spec-for-code-topo.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/grag/: charter.md  history.md
.squad/agents/joan/: charter.md  history.md
.squad/agents/otho/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/simon/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions/inbox/: grag-hof-fix.md  otho-profile-findings.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-03-08-mcp-tool-enhancements.md  2026-03-09-index-freshness-p0p1.md  2026-03-31-perf-profiling.md  2026-03-31T2130Z-init-profiling.md  2026-03-31T2210-partial-profiling.md  2026-03-31T2237Z-extract-timeout.md  2026-03-31T2313Z-persist-optimization.md  2026-04-01T01-00-sqlite-scaling-analysis.md  2026-04-01T0500Z-mcp-tool-fixes.md  2026-04-01T1600Z-parse-extract-profiling.md  2026-04-01T1650Z-leak-fix-reprofile-roadmap.md  2026-07-17T-p0-heap-fixes.md
.squad/orchestration-log/: 2026-03-08T-mcp-enhancements.md  2026-03-09T-anders-index-freshness.md  2026-03-09T-booch-index-freshness.md  2026-03-09T-lambert-freshness-tests.md  2026-03-31T2130Z-otho.md  2026-03-31T2210-otho-partial-profile.md  2026-03-31T2237Z-grag.md  2026-03-31T2237Z-joan.md  2026-03-31T2313Z-grag.md  2026-03-31T2313Z-joan.md  2026-04-01T01-00-otho.md  2026-04-01T0500Z-grag.md  2026-04-01T0500Z-joan.md  2026-04-01T1600Z-otho.md  2026-04-01T1650Z-grag.md  2026-04-01T1650Z-otho.md  2026-04-01T1650Z-simon.md  2026-07-17T-p0-heap-fixes-grag.md  2026-07-17T-p0-heap-fixes-joan.md
.squad/skills/sqlite-bulk-load/: SKILL.md
benchmark/: README.md  metrics.py  run.py  score.py
benchmark/query/: README.md  run_query.py
benchmark/query/expected/: callers-generic.json  callers-unique.json  cross-root.json  enum-dagre.json  enum-kibana.json  field-access.json  method-fields.json
benchmark/query/tasks/: callers-generic.json  callers-unique.json  cross-root.json  enum-dagre.json  enum-kibana.json  field-access.json  method-fields.json
cmake/: TreeSitterGrammars.cmake
design/: .gitignore  Makefile  codetopo.bib  codetopo.tex
design/sections/: 01-overview.tex  02-architecture.tex  03-indexing-pipeline.tex  04-data-model.tex  05-mcp-protocol.tex  06-workspace.tex  07-query-engine.tex  08-related-work.tex  09-status.tex
docs/: proposal-index-freshness.md
src/: main.cpp
src/cli/: cmd_doctor.h  cmd_index.cpp  cmd_index.h  cmd_init.h  cmd_mcp.h  cmd_parse_file.h  cmd_skills.h  cmd_watch.h  cmd_workspace.h
src/core/: arena.cpp  arena.h  arena_pool.h  config.cpp  config.h  thread_pool.h
src/db/: connection.h  fts.h  queries.h  schema.h  workspace.cpp  workspace.h
src/index/: change_detector.h  crashlist.h  extractor.cpp  extractor.h  language_id.h  parser.h  persister.h  scanner.h  stable_key.h  subprocess_parse.h  supervisor.cpp  supervisor.h
src/mcp/: envelope.cpp  envelope.h  error.h  server.h  tools.cpp  tools.h
src/semantic/: token_vectors.h
src/tui/: progress.h
src/util/: git.h  hash.h  json.h  lock.h  log.h  path.h  process.cpp  process.h  profiler.h  repo.h  tokens.h
src/watch/: watcher.h
tests/contract/: test_error_envelope.cpp  test_mcp_schemas.cpp
tests/integration/: test_crash_recovery.cpp  test_doctor.cpp  test_index_real_repo.cpp  test_mcp_enhancements.cpp  test_mcp_round_trip.cpp  test_v2_tokens_integration.cpp  test_v2_tokens_integration.cpp.bak  test_watch.cpp
tests/unit/: test_approx_callgraph.cpp  test_arena_lifetime.cpp  test_change_detect.cpp  test_cli_exit_codes.cpp  test_csharp_extractor.cpp  test_dec039_optimizations.cpp  test_detect_changes.cpp  test_file_summary_nodeid.cpp  test_freshness.cpp  test_fts_search.cpp  test_get_architecture.cpp  test_gitignore.cpp  test_http_call_features.cpp  test_javascript_extractor.cpp  test_lean_listing.cpp  test_lock.cpp  test_path_normalize.cpp  test_persist_optimizations.cpp  test_placeholder.cpp  test_process.cpp  test_resource_limits.cpp  test_semantic_search.cpp  test_source_at.cpp  test_stable_key.cpp  test_trace_tools.cpp  test_v2_tokens_unit.cpp  test_watchdog_timeout.cpp  test_workspace_merge.cpp
tools/: gen_token_vectors.py
